--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -33,6 +33,10 @@
 
     <span>Задание 3</span><br>
     <button onclick="task_3()">Click Me</button>
+    <br><br>
+
+    <span>Задание 4</span><br>
+    <button onclick="task_4()">Click Me</button>
 
     <script src="script.js"></script>
 </body>
