--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -37,6 +37,11 @@
 
     <span>Задание 4</span><br>
     <button onclick="task_4()">Click Me</button>
+    <br><br>
+
+    <span>Задание 5</span><br>
+    <button onclick="task_5()">Click Me</button>
+    <br><br>
 
     <script src="script.js"></script>
 </body>
