--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -39,9 +39,19 @@
     <button onclick="task_4()">Click Me</button>
     <br><br>
 
-    <span>Задание 5</span><br>
+    <span>Задание 6</span><br>
     <button onclick="task_5()">Click Me</button>
     <br><br>
+
+    <span>Задание 7</span>
+    <p>
+        <b>null !== 0  т.к. null - это элементаное значение, а 0 - это число. Ещё можно сказать что null - это пустота в которой не чего нет, а 0 - это хоть что-то.</b>
+    </p>
+
+    <span>Задание 8</span><br>
+    <button onclick="task_8()">Click Me</button>
+    <br><br>
+
 
     <script src="script.js"></script>
 </body>
