--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <button onclick="task_1()">Вывести</button>
     <br><br>
 
+    <span>Задание 2-3</span><br>
+    <button onclick="task_2_3()">Click</button>
+    <br><br>
+
+
     <span>Задание 4</span><br>
-    <button onclick="task_4()">Вывести</button>
+    <button onclick="task_4()">Нажать</button>
     <br><br>
 
     <span>Задание 5</span><br>
-    <button onclick="task_5()">Вывести</button>
+    <button onclick="task_5()">Построить</button>
     <br><br>
 
 
