task 2 is ready

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <span>Задание 2</span> <br>
+    <button onclick="task_1()">Вывести общую сумму товаров</button>
     
 
     <script src="script.js"></script>
