task 1 is ready

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <span>Задание 1</span> <br>
+    <button onclick="task_1()">Разбить число</button>
+    <br><br>
+
     <span>Задание 2</span> <br>
-    <button onclick="task_1()">Вывести общую сумму товаров</button>
+    <button onclick="task_2()">Вывести общую сумму товаров</button>
+    <br><br>
     
 
     <script src="script.js"></script>
